Correccion errores de compilacion y formato de salida

--- a/LaboratorioRendimiento_Meneses/Makefile
+++ b/LaboratorioRendimiento_Meneses/Makefile
@@ -5,7 +5,7 @@ MODULOS = modulo
 labRendiMeneses:
 	$(GCC) $(MODULOS).c -c
 	$(GCC) $@.c $(MODULOS).o -o $@
-
+	rm -f $(MODULOS).o
 
 clear:
-	rm -f $(PROGRAMAS) $(MODULOS).o
+	rm -f $(PROGRAMAS)
