modularizacion taller rendimiento

--- a/Tallerrendimiento/Makefile
+++ b/Tallerrendimiento/Makefile
@@ -1,3 +1,12 @@
+#**************************************************************
+#         		Pontificia Universidad Javeriana
+#     Autor: Andres Eduardo Meneses Rincon y Karol Dayan Torres Vides
+#     Fecha: 14/11/2025
+#     Materia: Sistemas Operativos
+#     Tema: Taller de Evaluación de Rendimiento
+#     Fichero: script automatización de compilacion y comandos diversos
+#****************************************************************/
+
 GCC = gcc
 CFLAGS = -lm
 FOPENMP = -fopenmp -O3
@@ -8,16 +17,16 @@ PROGRAMAS = mmClasicaOpenMP mmClasicaFork mmClasicaPosix mmFilasOpenMP
 All: $(PROGRAMAS)
 
 mmClasicaFork:
-	$(GCC) $(CLFAGS) $@.c -o $@ 
+	$(GCC) $(CLFAGS) $@.c moduloClasicaFork.c -o $@ 
 
 mmClasicaOpenMP:
-	$(GCC) $(CLFAGS) $@.c -o $@ $(FOPENMP)
+	$(GCC) $(CLFAGS) $@.c moduloClasicaOpenMP.c -o $@ $(FOPENMP)
 
 mmFilasOpenMP:
-	$(GCC) $(CLFAGS) $@.c -o $@ $(FOPENMP)
+	$(GCC) $(CLFAGS) $@.c moduloFilasOpenMP.c -o $@ $(FOPENMP)
 
 mmClasicaPosix:
-	$(GCC) $(CLFAGS) $@.c -o $@ 
+	$(GCC) $(CLFAGS) $@.c moduloClasicaPosix.c -o $@ 
 
 clean:
 	$(RM) $(PROGRAMAS) 
